--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "nuxt-starter",
   "version": "1.0.0",
-  "description": "Nuxt.js + Vuetify.js project",
+  "description": "Nuxt.js + Vuetify.js + Google Material Icons project template",
   "author": "Martin Dünkelmann <nc-duenkekl3@netcologne.de>",
+  "homepage": "https://martinx3.github.io/",
+  "license": "SEE LICENSE IN LICENSE",
   "private": true,
   "scripts": {
     "dev": "nuxt",
@@ -18,6 +20,7 @@
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-imports": "^1.4.1",
     "eslint": "^4.3.0",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
@@ -25,6 +28,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-vue": "^4.0.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   }
