--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "babel-eslint": "^8.2.3",
     "babel-plugin-transform-imports": "^1.4.1",
     "eslint": "^4.3.0",
-    "eslint-friendly-formatter": "^4.0.1",
     "eslint-config-standard": "^11.0.0",
+    "eslint-friendly-formatter": "^4.0.1",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-html": "^4.0.3",
     "eslint-plugin-import": "^2.7.0",
@@ -33,6 +33,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1"
+    "stylus-loader": "^3.0.1",
+    "vue-style-loader": "^4.1.2"
   }
 }
