working navbar and icons

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nuxt-portfolio",
   "version": "1.0.0",
-  "description": "My astonishing Nuxt.js project",
+  "description": "Nuxt.js portfolio",
   "author": "Justin Leniger",
   "private": true,
   "scripts": {
