--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/bulma": "^1.2.0",
+    "@nuxtjs/bulma": "^1.2.1",
+    "@nuxtjs/sitemap": "^0.1.1",
     "cross-env": "^5.2.0",
     "nuxt": "^2.0.0"
   },
