--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   },
   "dependencies": {
     "@nuxtjs/bulma": "^1.2.1",
-    "@nuxtjs/sitemap": "^0.1.1",
+    "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/sitemap": "^1.0.0",
     "cross-env": "^5.2.0",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.4.0"
   },
   "devDependencies": {
-    "node-sass": "^4.9.3",
-    "nodemon": "^1.11.0",
-    "sass-loader": "^7.1.0"
+    "nodemon": "^1.18.9"
   }
 }
