--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "nuxt": "^2.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.11",
+    "node-sass": "^4.11.0",
+    "sass-loader": "^7.1.0"
   }
 }
