--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -6,7 +6,7 @@ media_folder: static/img
 public_folder: /img
 
 collections:
-  - name: 'post'
+  - name: 'posts'
     label: 'Posts'
     format: 'json'
     folder: 'assets/content/post'
