--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -9,7 +9,7 @@ collections:
   - name: 'posts'
     label: 'Posts'
     format: 'json'
-    folder: 'assets/content/post'
+    folder: 'assets/content/posts'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
