--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@nuxtjs/google-analytics": "^2.2.0",
+    "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/sitemap": "^2.1.0",
     "cross-env": "^7.0.2",
     "nuxt": "^2.12.0",
