--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/sitemap": "^2.1.0",
     "cross-env": "^7.0.2",
-    "nuxt": "^2.12.0",
-    "vue-gallery": "^2.0.1"
+    "nuxt": "^2.12.0"
   },
   "devDependencies": {
     "node-sass": "^4.11.0",
