--- a/package.json
+++ b/package.json
@@ -11,15 +11,18 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "@nuxtjs/google-analytics": "^2.2.0",
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/sitemap": "^2.1.0",
     "cross-env": "^7.0.2",
-    "nuxt": "^2.12.0"
+    "nuxt": "^2.14.0"
   },
   "devDependencies": {
+    "@aceforth/nuxt-optimized-images": "^1.1.0",
+    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-pngquant": "^9.0.0",
     "node-sass": "^4.11.0",
     "nodemon": "^1.18.11",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "webp-loader": "^0.6.0"
   }
 }
