--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -2,8 +2,7 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: static/img
-public_folder: /img
+media_folder: assets/images
 
 collections:
   - name: 'posts'
@@ -18,5 +17,5 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Featured Image', name: 'thumbnail', widget: 'image', required: false}
+      - { label: 'Featured Image', name: 'hero', widget: 'image', required: false}
       - { label: 'Body', name: 'body', widget: 'markdown' }
