--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxt/content": "^1.6.0",
     "@nuxtjs/markdownit": "^1.2.9",
     "@nuxtjs/sitemap": "^2.1.0",
     "cross-env": "^7.0.2",
