--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,8 +7,8 @@ media_folder: assets/images
 collections:
   - name: 'posts'
     label: 'Posts'
-    format: 'json'
-    folder: 'assets/content/posts'
+    format: 'frontmatter'
+    folder: 'content/posts'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
